--- a/Exercice1/Exercice1.html
+++ b/Exercice1/Exercice1.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Exercice1</title>
+  <title>Exercice 1</title>
 </head>
 <body>
-  <div class="image">
-      <img src="images/image1.jpg" onmouseover="border()" onmouseout="images/image1.jpg" id="image1"/>
-  </div>
-  <script type = "text/javascript">
-function border(){
-  document.getElementById("image1").style.borderColor = "red"; 
-}
-</script>
+  <img src="images/image1.jpg" id="image1"/>
+  <script src="Exercice1.js" charset="utf-8"></script>
+  <script type="text/javascript">
+  var img = document.querySelector('img');
+  img.addEventListener('mouseover',borderImg);
+  img.addEventListener('mouseout',resetImg);
+  </script>
 </body>
 </html>
